# pico_acc

./: CMakeLists.txt  README.md  adxl345.c  adxl345.h  pico_acc.c  reg.c  reg.h
analysis/: pico.pl  plot.sh
logs/: feb0607.txt
